<resources>
    <string name="app_name_colored"><font color='#4c81c3'>L</font><font color='#ec393c'>O</font><font color='#f5bb40'>C</font><font color='#4c81c3'>A</font><font color='#47a95e'>L</font>" +
                "<font color='#ea3a3d'>B</font><font color='#ed5526'>I</font><font color='#f6bd16'>G</font>" +
                "<font color='#46aa52'>B</font><font color='#517ebf'>I</font><font color='#429bd5'>G</font></string>
    <string name="app_name">LOCAL BIG APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="btn_near">NEAR ME</string>
    <string name="btn_favorites">FAVORITES</string>
    <string name="btn_events">EVENTS</string>
    <string name="btn_coupons">COUPONS</string>
    <string name="btn_account">ACCOUNT</string>
    <string name="btn_search">SEARCH</string>
    <string name="logoff">Disconnect</string>
    <string name="connection">Log-in</string>
    <string name="device">Device</string>
    <string name="settings">Settings</string>
    <string name="profile">Account</string>
    <string name="str_nav_setting">SETTINGS</string>
    <string name="str_nav_help">HELP</string>
    <string name="str_notifications">Notifications</string>
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="str_logout">DISCONNECT</string>
    <string name="str_login">LOGIN</string>
    <string name="str_home">NEAR ME</string>
    <string name="default_format">###,##0.00</string>
    <string name="default_decimal_separator">\'</string>
    <string name="icon">icon</string>
    <string name="Event">EVENTS</string>
    <string name="content">content</string>
    <string name="clock">clock</string>
    <string name="Coupon">COUPONS</string>
    <string name="Business">BUSINESSES</string>
    <string name="retry">No connection, retry</string>
    <string name="error_retry">An error has ocurred, retry</string>
    <string name="dialog_connection_title">No connection</string>
    <string name="dialog_connection_description">We can not reach our servers at the moment.\n\nYou can always check you favorites and other items using the menu!</string>
    <string name="dialog_internet_title">No internet</string>
    <string name="dialog_internet_description">You seem to have no internet connection, this app requires internet to get the latest content.\n\nYou can continue offline!</string>
    <string name="ok">Ok</string>
    <string name="owner">Owner</string>
    <string name="placeholder_empty">No business found</string>
    <string name="placeholder_offline">No Internet connection available</string>
    <string name="global_map_fail_toast">You device does not support map</string>
    <string name="menu_layers">Layers</string>
    <string name="menu_layers_normal">Normal</string>
    <string name="menu_layers_satellite">Satellite</string>
    <string name="menu_layers_hybrid">Hybrid</string>
    <string name="menu_layers_terrain">Terrain</string>
    <string name="action_search">Search</string>
    <string name="unit_meter">m</string>
    <string name="unit_kilometer">km</string>
    <string name="unit_mile">mi</string>
    <string name="share">Share</string>
    <string name="fragment_business_detail_info_title">Information</string>
    <string name="fragment_business_detail_map_navigate">Navigate</string>
    <string name="fragment_business_detail_map_explore">Explore</string>
    <string name="fragment_business_detail_map_title">Map</string>
    <string name="fragment_poi_detail_description_title">Description</string>
    <string name="km">1 mi</string>
    <string name="fragment_event_start_date">Start date</string>
    <string name="fragment_event_end_date">End date</string>
    <string name="active">Active</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="menu_option">Option</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="filter_right_header_text">Filter Business by</string>
    <string name="sort_right_header_text">Sort Business by</string>
    <string name="chose">Choose</string>
    <string name="business_categories">Business Categories</string>
    <string name="favorites">FAVORITES BUSINESSES</string>
    <string name="s">DNLCxEVMmBkPCwFHVjVMavYtcTIeYi72</string>
    <string name="please_wait">please wait</string>
    <string name="credit_card">Credit Card</string>
    <string name="notification">Notification</string>
    <string name="next">NEXT</string>
    <string name="login">Login</string>
    <string name="not_remember">forget your password?</string>
    <string name="pass_forget">RECOVER PASSWORD</string>
    <string name="insert_email_login">Insert your email:</string>
    <string name="not_registered_login">Not registered yet?</string>
    <string name="registrati">Register now</string>
    <string name="email">User email</string>
    <string name="recover">Recover password</string>
    <string name="speak_now">Speak now</string>
    <string name="font_title">Knockout-29.otf</string>
    <string name="filter_business">FILTER BUSINESS</string>
    <string name="filter">DONE</string>
    <string name="businesses">BUSINESSES</string>
    <string name="patio_take_picture">New</string>
    <string name="patio_attach_picture">Attach</string>
    <string name="patio_remove_picture">Remove</string>
    <string name="patio_action_cancel">Cancel</string>
    <string name="patio_thumbnails_message">%1$d de %2$d added images</string>
    <string name="patio_footer">%1$d of %2$d</string>
    <string name="event_description">EVENT DESCRIPTION</string>
    <string name="free_entrance">FREE ENTANCE</string>
    <string name="event_information">EVENT INFORMATION</string>
    <string name="event_location">EVENT LOCATION</string>
    <string name="event_picture">EVENT PICTURE</string>
    <string name="event_start_date">PICK EVENT START DATE</string>
    <string name="event_end_date">PICK EVENT END DATE</string>
    <string name="divider_hour">:</string>
    <string name="pick_start_date_time">SET START EVENT DATE AND TIME</string>
    <string name="pick_start_date_time_business">SET START BUSINESS DATE AND TIME</string>
    <string name="pick_end_date_time">SET END EVENT DATE AND TIME</string>
    <string name="pick_start_date_time_coupon">SET START COUPON DATE AND TIME</string>
    <string name="pick_end_date_time_coupon">SET END COUPON DATE AND TIME</string>
    <string name="pick_address">SET EVENT ADDRESS</string>
    <string name="event_address">EVENT ADDRESS</string>
    <string name="business_information">BUSINESS INFORMATION</string>
    <string name="business_address">BUSINESS ADDRESS</string>
    <string name="business_description">BUSINESS DESCRIPTION</string>
    <string name="business_picture">BUSINESS PICTURES</string>
    <string name="btn_skip_intro">Skip</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="createreview">POST A REVIEW</string>
    <string name="post">POST</string>
    <string name="coupon_information">COUPON INFORMATION</string>
    <string name="coupon_picture">COUPON PICTURE</string>
    <string name="coupon_description">COUPON DESCRIPTION</string>
    <string name="coupon_active">IS ACTIVE</string>
    <string name="coupon_inpercent">IN PERCENT</string>
    <string name="discount">Discount</string>
    <string name="business_promotional_video">BUSINESS PROMOTIONAL VIDEO</string>
    <string name="youtube_video_url" />
    <string name="youtube_video" />
    <string name="add_video_url">Youtube video URL</string>
    <string name="input_add_youtube">Please add your youtube video url</string>
    <string name="add">Add</string>
    <string name="Success">Success!</string>
    <string name="Loading">Authenticating</string>
    <string name="Created">User Created</string>
    <string name="Creating">Creating</string>
    <string name="you_are_business_owner">You are business owner?</string>
    <string name="permission_rationale_title">We need this permission</string>
    <string name="permission_rationale_message">This permission is needed for some applications functionalities so please, allow it!</string>
    <string name="permission_rationale_settings_button_text">SEETINGS</string>
    <string name="all_permissions_denied_feedback">All those permissions are needed for doing some magic</string>
    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="lorem_ipsum">Lorem ipsum \n\ndolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</string>
    <string name="intro_near_me_tittle">NEAR ME</string>
    <string name="intro_near_me">Discover local businesses around your current location. Just tab on the pin you are interested in and you will see their Local Big App page where you will find more information including pictures, coupons, events and contact information.</string>
    <string name="intro_near_me_for_business_tittle">FOR BUSINESSES OWNERS</string>
    <string name="intro_near_me_for_business"> This is where and how your business will appear in the map. The more information you provide in your profile will help your target audience reach your business.</string>
    <string name="intro_favorites_business">This will keep you up to date with coupons and events from the businesses you love!</string>
</resources>