<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_near_me"
            android:title="@string/str_home"
            android:checked="true" />

        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_action_business"
            android:title="@string/Business" />

        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_action_event"
            android:title="@string/Event" />

        <item
            android:id="@+id/nav_coupons"
            android:icon="@drawable/ic_action_cupon"
            android:title="@string/Coupon" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/str_login" />
    </group>

    <item android:title="Application">
        <menu>
            <group
                android:checkableBehavior="single">
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/str_nav_setting" />
            </group>
        </menu>
    </item>

</menu>
